--- a/JsMvcServerSide/JsMvcServerSide.csproj
+++ b/JsMvcServerSide/JsMvcServerSide.csproj
@@ -44,9 +44,13 @@
     <Compile Include="ItemJson.cs" />
     <Compile Include="JsMvcBaseAtribute.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Test\HomeController.cs" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="JsMvc.js" />
+  </ItemGroup>
+  <ItemGroup>
+    <Content Include="Test\Index.cshtml" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
