--- a/JsMvcServerSide/JsMvcServerSide.csproj
+++ b/JsMvcServerSide/JsMvcServerSide.csproj
@@ -43,7 +43,7 @@
     <Compile Include="DisplayMode.cs" />
     <Compile Include="IEnumerableSelectItems.cs" />
     <Compile Include="ItemJson.cs" />
-    <Compile Include="JsMvcBaseAtribute.cs" />
+    <Compile Include="JsMvcBaseAttribute.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Test\HomeController.cs" />
   </ItemGroup>
